tests/baselines/reference/FunctionDeclaration12_es6.errors.txt
FunctionDeclaration12_es6.ts(1,20): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


==== FunctionDeclaration12_es6.ts (1 errors) ====
    var v = function * yield() { }
                       ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.